--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -9,7 +9,7 @@ ja:
         current_password: 現在のパスワード
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
-        email: Eメール
+        email: メールアドレス
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
@@ -26,6 +26,8 @@ ja:
         unlock_token: ロック解除用トークン
         updated_at: 更新日
         name: 名前
+        birth_date: 生年月日
+        gender: 性別
     models:
       user: ユーザ
   devise:
