--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -39,7 +39,7 @@ ja:
       send_paranoid_instructions: メールアドレスが登録済みの場合、本人確認用のメールが数分以内に送信されます。
     failure:
       already_authenticated: すでにログインしています。
-      inactive: アカウントが有効化されていません。メールに記載された手順にしたがって、アカウントを有効化してください。
+      inactive: 本人確認メールよりアカウントを有効化してください。また、過去に退会された方は新規会員登録をお願いします。
       invalid: "%{authentication_keys}またはパスワードが違います。"
       last_attempt: もう一回誤るとアカウントがロックされます。
       locked: アカウントは凍結されています。
